PROTON-329: Fix Cmake's failure to find Perl libraries.
git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1494614 13f79535-47bb-0310-9956-ffa450edef68

--- a/proton-c/bindings/CMakeLists.txt
+++ b/proton-c/bindings/CMakeLists.txt
@@ -53,6 +53,7 @@ if (PHP_CONFIG_EXE)
 endif (PHP_CONFIG_EXE)
 
 # Prerequisites for Perl:
+include(FindPerl)
 include(FindPerlLibs)
 if (PERLLIBS_FOUND)
   set (DEFAULT_PERL ON)
