--- a/proton-c/bindings/perl/CMakeLists.txt
+++ b/proton-c/bindings/perl/CMakeLists.txt
@@ -27,8 +27,21 @@ set (CMAKE_C_FLAGS ${PERLCFLAGS})
 swig_add_module(cproton_perl perl perl.i)
 swig_link_libraries(cproton_perl ${BINDING_DEPS} ${PERL_LIBRARY})
 
-install(FILES ${CMAKE_CURRENT_BINARY_DIR}/libcproton_perl.so
-              ${CMAKE_CURRENT_BINARY_DIR}/cproton_perl.pm
+if ((${CMAKE_MAJOR_VERSION} EQUAL 2) AND (${CMAKE_MINOR_VERSION} LESS 8))
+  install(FILES ${CMAKE_CURRENT_BINARY_DIR}/cproton_perl.so
+        DESTINATION ${PERL_ARCHLIB}
+        COMPONENT ${QPID_COMPONENT_CLIENT}
+        )
+else()
+  install(FILES ${CMAKE_CURRENT_BINARY_DIR}/libcproton_perl.so
+        RENAME cproton_perl.so
+        DESTINATION ${PERL_ARCHLIB}
+        COMPONENT ${QPID_COMPONENT_CLIENT}
+        )
+endif ((${CMAKE_MAJOR_VERSION} EQUAL 2) AND (${CMAKE_MINOR_VERSION} LESS 8))
+
+
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/cproton_perl.pm
         DESTINATION ${PERL_ARCHLIB}
         COMPONENT Perl)
 
