PROTON-343: initial implementation of logging, including the central class ProtonLogger and category logger implementations for java.util.logging (the default), standard out and SLF4J. Still to do: - Implementations in proton-jni and proton-c - Define the full set of logging functions in EngineLogger et al. - Modify existing Proton classes to actually use the new logging classes.
git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1501276 13f79535-47bb-0310-9956-ffa450edef68

--- a/proton-j/proton-api/pom.xml
+++ b/proton-j/proton-api/pom.xml
@@ -29,4 +29,14 @@
     <url>http://svn.apache.org/viewvc/qpid/proton/</url>
   </scm>
 
+  <dependencies>
+    <dependency>
+      <!-- used to build SLF4JCategoryLogger, but marked 'optional' so application code does
+           not require it (unless it explicitly chooses to use the SLF4JCategoryLogger) -->
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>1.7.5</version>
+      <optional>true</optional>
+    </dependency>
+  </dependencies>
 </project>
