PROTON-343: moved JUL and SLF4J loggers to proton-logging module, and made StdOutCategoryLogger the default (and adding configurability to it).
git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1501734 13f79535-47bb-0310-9956-ffa450edef68

--- a/proton-j/pom.xml
+++ b/proton-j/pom.xml
@@ -44,6 +44,7 @@
 
   <modules>
     <module>proton-api</module>
+    <module>proton-logging</module>
     <module>proton</module>
     <module>contrib/proton-jms</module>
     <module>contrib/proton-hawtdispatch</module>
