PROTON-352: Fixed the runtime environment for Ruby spec tests in Cmake.
The tests were not being run in the bindings/ruby directory, which
caused Rspec to fail to find the actual tests. The test now runs in the
ruby directory itself.

git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1503700 13f79535-47bb-0310-9956-ffa450edef68

--- a/proton-c/CMakeLists.txt
+++ b/proton-c/CMakeLists.txt
@@ -410,8 +410,11 @@ if (ruby_exe)
   # ruby spec tests
   find_program(rspec_exe rspec)
   if (rspec_exe)
-    add_test (ruby-spec-test python ${env_py} "PATH=${rb_path}" "RUBYLIB=${rb_rubylib}"
-      ${rspec_exe})
+    add_test (NAME ruby-spec-test
+              WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bindings/ruby
+              COMMAND python ${env_py} "PATH=${rb_path}" "RUBYLIB=${rb_rubylib}"
+                      ${rspec_exe})
+
   else(rspec_exe)
     message (STATUS "Cannot find rspec, skipping rspec tests")
   endif(rspec_exe)
