--- a/proton-c/CMakeLists.txt
+++ b/proton-c/CMakeLists.txt
@@ -56,6 +56,7 @@ configure_file (
   )
 
 include_directories ("${CMAKE_CURRENT_BINARY_DIR}")
+include_directories ("${CMAKE_CURRENT_BINARY_DIR}/include")
 include_directories ("${CMAKE_CURRENT_SOURCE_DIR}/include")
 include_directories ("${CMAKE_CURRENT_SOURCE_DIR}/../examples/include")
 
