proton-212 - fix and check for non C99 compliant Windows functions
git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1512109 13f79535-47bb-0310-9956-ffa450edef68

--- a/proton-c/CMakeLists.txt
+++ b/proton-c/CMakeLists.txt
@@ -284,6 +284,11 @@ set_target_properties (
   LINK_FLAGS "${CATCH_UNDEFINED}"
   )
 
+if (MSVC)
+  # guard against use of C99 violating functions on Windows
+  include(WindowsC99CheckDef)
+endif(MSVC)
+
 add_executable (proton src/proton.c)
 target_link_libraries (proton qpid-proton)
 
