PROTON-399: Ruby bindings now install with the rest of Proton.
It will not install as a gem but instead as a site library using the
Cmake build environment.

git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1512327 13f79535-47bb-0310-9956-ffa450edef68

--- a/proton-c/bindings/ruby/CMakeLists.txt
+++ b/proton-c/bindings/ruby/CMakeLists.txt
@@ -29,3 +29,29 @@ set_target_properties(cproton-ruby
 install(TARGETS cproton-ruby
         DESTINATION ${RUBY_ARCH_DIR}
         COMPONENT Ruby)
+
+# Install the Ruby libraries
+set(RUBY_LIBRARIES
+    lib/qpid_proton/array.rb
+    lib/qpid_proton/data.rb
+    lib/qpid_proton/described.rb
+    lib/qpid_proton/exception_handling.rb
+    lib/qpid_proton/exceptions.rb
+    lib/qpid_proton/hash.rb
+    lib/qpid_proton/helper.rb
+    lib/qpid_proton/mapping.rb
+    lib/qpid_proton/message_format.rb
+    lib/qpid_proton/message.rb
+    lib/qpid_proton/messenger.rb
+    lib/qpid_proton/subscription.rb
+    lib/qpid_proton/tracker.rb
+    lib/qpid_proton/tracker_status.rb
+)
+
+install(FILES lib/qpid_proton.rb
+        DESTINATION ${RUBY_VENDORLIB_DIR}
+        COMPONENT Ruby)
+
+install(FILES ${RUBY_LIBRARIES}
+        DESTINATION ${RUBY_VENDORLIB_DIR}/qpid_proton
+        COMPONENT RUby)
