--- a/proton-c/bindings/perl/CMakeLists.txt
+++ b/proton-c/bindings/perl/CMakeLists.txt
@@ -22,6 +22,16 @@ include_directories("${PERL_INCLUDE_PATH}")
 # Need to pass in the same compiler flags used to build Perl itself
 execute_process(COMMAND perl -MConfig -e "print \$Config{ccflags}"
                 OUTPUT_VARIABLE PERLCFLAGS)
+if (NOT PERL_VENDORLIB)
+  execute_process(COMMAND perl -V:installvendorlib
+                  OUTPUT_VARIABLE PERL_VENDORLIB_OUTPUT_VARIABLE
+                  RESULT_VARIABLE PERL_VENDORLIB_RESULT_VARIABLE)
+  if (NOT PERL_VENDORLIB_RESULT_VARIABLE)
+      string(REGEX REPLACE "install[a-z]+='([^']+)'.*" "\\1" PERL_VENDORLIB ${PERL_VENDORLIB_OUTPUT_VARIABLE})
+      file(TO_CMAKE_PATH "${PERL_VENDORLIB}" PERL_VENDORLIB)
+  endif (NOT PERL_VENDORLIB_RESULT_VARIABLE)
+endif (NOT PERL_VENDORLIB)
+
 set (CMAKE_C_FLAGS ${PERLCFLAGS})
 
 swig_add_module(cproton_perl perl perl.i)
@@ -40,8 +50,34 @@ else()
         )
 endif ((${CMAKE_MAJOR_VERSION} EQUAL 2) AND (${CMAKE_MINOR_VERSION} LESS 8))
 
+set(PERL_LIBRARIES
+    lib/qpid/proton/array_helper.pm
+    lib/qpid/proton/Constants.pm
+    lib/qpid/proton/Data.pm
+    lib/qpid/proton/Mapping.pm
+    lib/qpid/proton/Message.pm
+    lib/qpid/proton/Messenger.pm
+)
+
+# get the perl vendor library if it's not already defined
+#if (NOT PERL_VENDORLIB)
+#  execute_process(COMMAND ${PERL_EXECUTABLE} "-V:installvendorlib"
+#                  OUTPUT_VARIABLE PERL_VENDORLIB_OUTPUT_VARIABLE
+#                  RESULT_VARIABLE PERL_VENDORLIB_RESULT_VARIABLE)
+#endif (!DEFINED PERL_VENDORLIB)
 
 install(FILES ${CMAKE_CURRENT_BINARY_DIR}/cproton_perl.pm
         DESTINATION ${PERL_ARCHLIB}
         COMPONENT Perl)
 
+install(FILES lib/qpid_proton.pm
+        DESTINATION ${PERL_VENDORLIB}
+        COMPONENT Perl)
+
+INSTALL(FILES lib/qpid/proton.pm
+        DESTINATION ${PERL_VENDORLIB}/qpid
+        COMPONENT Perl)
+
+INSTALL(FILES ${PERL_LIBRARIES}
+        DESTINATION ${PERL_VENDORLIB}/qpid/proton
+        COMPONENT Perl)
