PROTON-408: [proton-c] Windows build does not put "d" suffix on debug file names
git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1515559 13f79535-47bb-0310-9956-ffa450edef68

--- a/proton-c/CMakeLists.txt
+++ b/proton-c/CMakeLists.txt
@@ -211,6 +211,10 @@ if (CMAKE_COMPILER_IS_GNUCC)
   endif (ENABLE_UNDEFINED_ERROR)
 endif (CMAKE_COMPILER_IS_GNUCC)
 
+if (MSVC)
+	set(CMAKE_DEBUG_POSTFIX "d")
+endif (MSVC)
+
 find_package(SWIG)
 if (SWIG_FOUND)
   add_subdirectory(bindings)
