PROTON-407: [proton-c] Windows install does not install .lib nor .pdb files This patch installs the .lib file(s) to the /bin directory.
git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1515614 13f79535-47bb-0310-9956-ffa450edef68

--- a/proton-c/CMakeLists.txt
+++ b/proton-c/CMakeLists.txt
@@ -321,6 +321,7 @@ pn_c_files (${qpid-proton-core} ${qpid-proton-platform} src/proton.c src/proton-
 # Install executables and libraries
 install (TARGETS proton proton-dump qpid-proton
   RUNTIME DESTINATION bin
+  ARCHIVE DESTINATION bin
   LIBRARY DESTINATION ${LIB_INSTALL_DIR})
 
 # Install header files
