PROTON-406: Fix installing the Ruby bindings.
Previously it checked for RUBY_VENDORLIB_DIR as provided by Cmake. But
this variable is not provided by older versions of CMake. Additionally,
older versions of Ruby did not provide a vendorlibdir. In those cases,
the behavior is to now get the Ruby sitearch dir instead.

git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1515795 13f79535-47bb-0310-9956-ffa450edef68

--- a/proton-c/bindings/ruby/CMakeLists.txt
+++ b/proton-c/bindings/ruby/CMakeLists.txt
@@ -48,10 +48,30 @@ set(RUBY_LIBRARIES
     lib/qpid_proton/tracker_status.rb
 )
 
+set(RUBY_ARCHLIB_DIR "${RUBY_VENDORLIB_DIR}")
+
+if (NOT RUBY_ARCHLIB_DIR)
+  execute_process(COMMAND ${RUBY_EXECUTABLE}
+                  -r rbconfig -e "print RbConfig::CONFIG['vendorlibdir']"
+    RESULT_VARIABLE RESULT_RUBY_ARCHLIB_DIR
+    OUTPUT_VARIABLE OUTPUT_RUBY_ARCHLIB_DIR)
+
+  if(NOT RESULT_RUBY_ARCHLIB_DIR AND OUTPUT_RUBY_ARCHLIB_DIR )
+    execute_process(COMMAND ${RUBY_EXECUTABLE}
+                    -r rbconfig -e "print RbConfig::CONFIG['sitearchdir']"
+      RESULT_VARIABLE RESULT_RUBY_ARCHLIB_DIR
+      OUTPUT_VARIABLE OUTPUT_RUBY_ARCHLIB_DIR)
+
+  endif()
+
+  set(RUBY_ARCHLIB_DIR "${OUTPUT_RUBY_ARCHLIB_DIR}")
+
+endif ()
+
 install(FILES lib/qpid_proton.rb
-        DESTINATION ${RUBY_VENDORLIB_DIR}
+        DESTINATION ${RUBY_ARCHLIB_DIR}
         COMPONENT Ruby)
 
 install(FILES ${RUBY_LIBRARIES}
-        DESTINATION ${RUBY_VENDORLIB_DIR}/qpid_proton
-        COMPONENT RUby)
+        DESTINATION ${RUBY_ARCHLIB_DIR}/qpid_proton
+        COMPONENT Ruby)
