PROTON-397: added example contributed by Marc Berkowitz
git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1516433 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,7 @@
       <modules>
         <module>proton-j</module>
         <module>tests</module>
+        <module>examples/messenger/java</module>
       </modules>
     </profile>
     <profile>
@@ -96,6 +97,7 @@
         <!--proton-j-impl is required so we can use its EncoderImpl and DecoderImpl to generate test data -->
         <module>proton-j/proton</module>
         <module>tests</module>
+        <module>examples/messenger/java</module>
       </modules>
     </profile>
   </profiles>
