--- a/proton-c/CMakeLists.txt
+++ b/proton-c/CMakeLists.txt
@@ -247,6 +247,7 @@ set (qpid-proton-core
 
   src/dispatcher/dispatcher.c
   src/engine/engine.c
+  src/transport/transport.c
   src/message/message.c
   src/sasl/sasl.c
 
