removed extra layer of decode; separate decode functionality out of codec.c
git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1519669 13f79535-47bb-0310-9956-ffa450edef68

--- a/proton-c/CMakeLists.txt
+++ b/proton-c/CMakeLists.txt
@@ -244,6 +244,7 @@ set (qpid-proton-core
   src/framing/framing.c
 
   src/codec/codec.c
+  src/codec/decoder.c
 
   src/dispatcher/dispatcher.c
   src/engine/engine.c
