split encoder out of codec.c and removed redundant layer of encoding
git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1522561 13f79535-47bb-0310-9956-ffa450edef68

--- a/proton-c/CMakeLists.txt
+++ b/proton-c/CMakeLists.txt
@@ -245,6 +245,7 @@ set (qpid-proton-core
 
   src/codec/codec.c
   src/codec/decoder.c
+  src/codec/encoder.c
 
   src/dispatcher/dispatcher.c
   src/engine/engine.c
