PROTON-413: Support for finding an installed proton that works on windows Use in conjunction with commit associated with QPID-5103. 1. In proton: cmake -DCMAKE_INSTALL_PREFIX=P:/install ... 2.            devenv proton.sln /build "Debug|Win32" /project INSTALL 3. In qpid:   cmake -DPROTON_ROOT=P:/install ... 4.            devenv qpid-cpp.sln /build "Debug|Win32 /project INSTALL
git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1522678 13f79535-47bb-0310-9956-ffa450edef68

--- a/proton-c/CMakeLists.txt
+++ b/proton-c/CMakeLists.txt
@@ -322,7 +322,12 @@ endmacro(pn_c_files)
 pn_c_files (${qpid-proton-core} ${qpid-proton-platform} src/proton.c src/proton-dump.c)
 
 # Install executables and libraries
-install (TARGETS proton proton-dump qpid-proton
+install (TARGETS proton proton-dump
+  RUNTIME DESTINATION bin
+  ARCHIVE DESTINATION bin
+  LIBRARY DESTINATION ${LIB_INSTALL_DIR})
+install (TARGETS qpid-proton
+  EXPORT  proton
   RUNTIME DESTINATION bin
   ARCHIVE DESTINATION bin
   LIBRARY DESTINATION ${LIB_INSTALL_DIR})
@@ -355,6 +360,15 @@ configure_file(${CMAKE_CURRENT_SOURCE_DIR}/src/libqpid-proton.pc.in
   ${CMAKE_CURRENT_BINARY_DIR}/libqpid-proton.pc @ONLY)
 install (FILES ${CMAKE_CURRENT_BINARY_DIR}/libqpid-proton.pc
   DESTINATION ${LIB_INSTALL_DIR}/pkgconfig)
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/src/libqpid-proton.cmake.in
+  ${CMAKE_CURRENT_BINARY_DIR}/libqpid-proton.cmake @ONLY)
+install (FILES ${CMAKE_CURRENT_BINARY_DIR}/libqpid-proton.cmake
+  DESTINATION ${LIB_INSTALL_DIR}/proton.cmake)
+install (EXPORT proton FILE proton-config.cmake DESTINATION lib/proton.cmake)
+file(WRITE ${LIB_INSTALL_DIR}/proton.cmake/proton-config-version.cmake
+    "set(PACKAGE_VERSION ${PN_VERSION})\n")
+install (FILES ${LIB_INSTALL_DIR}/proton.cmake/proton-config-version.cmake
+    DESTINATION lib/proton.cmake)
 
 # CTest
 
