split subscription out into a separate file
git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1533103 13f79535-47bb-0310-9956-ffa450edef68

--- a/proton-c/CMakeLists.txt
+++ b/proton-c/CMakeLists.txt
@@ -254,6 +254,7 @@ set (qpid-proton-core
   src/sasl/sasl.c
 
   src/messenger/messenger.c
+  src/messenger/subscription.c
   src/messenger/store.c
   src/messenger/transform.c
 
