--- a/proton-j/contrib/proton-hawtdispatch/pom.xml
+++ b/proton-j/contrib/proton-hawtdispatch/pom.xml
@@ -29,7 +29,7 @@
 
   <properties>
     <hawtbuf-version>1.9</hawtbuf-version>
-    <hawtdispatch-version>1.18-SNAPSHOT</hawtdispatch-version>
+    <hawtdispatch-version>1.18</hawtdispatch-version>
   </properties>
 
   <dependencies>
@@ -51,17 +51,8 @@
       <scope>provided</scope>
     </dependency>
   </dependencies>
-  
-  <repositories>
-    <repository>
-      <id>com.fusesource.m2.snapshot</id>
-      <url>http://repo.fusesource.com/nexus/content/repositories/snapshots/</url>
-      <releases><enabled>false</enabled></releases>
-      <snapshots><enabled>true</enabled></snapshots>
-    </repository>
-  </repositories>
 
-  <build> 
+  <build>
   </build>
   <scm>
     <url>http://svn.apache.org/viewvc/qpid/proton/</url>
