--- a/proton-c/bindings/python/CMakeLists.txt
+++ b/proton-c/bindings/python/CMakeLists.txt
@@ -30,10 +30,12 @@ set_target_properties(_cproton
 
 find_package(PythonInterp REQUIRED)
 
-execute_process(COMMAND ${PYTHON_EXECUTABLE}
-                -c "from distutils.sysconfig import get_python_lib; print get_python_lib(True)"
-                OUTPUT_VARIABLE PYTHON_SITEARCH_PACKAGES
-                OUTPUT_STRIP_TRAILING_WHITESPACE)
+if (NOT PYTHON_SITEARCH_PACKAGES)
+   execute_process(COMMAND ${PYTHON_EXECUTABLE}
+                           -c "from distutils.sysconfig import get_python_lib; print get_python_lib(True)"
+                           OUTPUT_VARIABLE PYTHON_SITEARCH_PACKAGES
+                           OUTPUT_STRIP_TRAILING_WHITESPACE)
+endif ()
 
 install(CODE "execute_process(COMMAND ${PYTHON_EXECUTABLE} -m py_compile cproton.py
                               WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})")
