PROTON-445: Python install now honors CMAKE_INSTALL_PREFIX
The language bindings will now honor this prefix, both the default value
and a user-specified value.

Developers can override it, though, by specifying PYTHON_INSTALL_PREFIX
at the command line as well. This will allow for installing the Python
bindings to a different directory if so desired.

git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1547577 13f79535-47bb-0310-9956-ffa450edef68

--- a/proton-c/bindings/python/CMakeLists.txt
+++ b/proton-c/bindings/python/CMakeLists.txt
@@ -30,12 +30,14 @@ set_target_properties(_cproton
 
 find_package(PythonInterp REQUIRED)
 
-if (NOT PYTHON_SITEARCH_PACKAGES)
-   execute_process(COMMAND ${PYTHON_EXECUTABLE}
-                           -c "from distutils.sysconfig import get_python_lib; print get_python_lib(True)"
-                           OUTPUT_VARIABLE PYTHON_SITEARCH_PACKAGES
-                           OUTPUT_STRIP_TRAILING_WHITESPACE)
-endif ()
+if (NOT PYTHON_INSTALL_PREFIX)
+  set(PYTHON_INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX})
+endif (NOT PYTHON_INSTALL_PREFIX)
+
+execute_process(COMMAND ${PYTHON_EXECUTABLE}
+  -c "from distutils.sysconfig import get_python_lib; print get_python_lib(True, prefix='${PYTHON_INSTALL_PREFIX}')"
+  OUTPUT_VARIABLE PYTHON_SITEARCH_PACKAGES
+  OUTPUT_STRIP_TRAILING_WHITESPACE)
 
 install(CODE "execute_process(COMMAND ${PYTHON_EXECUTABLE} -m py_compile cproton.py
                               WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})")
