Revert "PROTON-445: Perl install now honors CMAKE_INSTALL_PREFIX"
This reverts commit 17a0b3b5cb46301e40b2082f6c5316a0876422c1.

git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1547833 13f79535-47bb-0310-9956-ffa450edef68

--- a/proton-c/bindings/perl/CMakeLists.txt
+++ b/proton-c/bindings/perl/CMakeLists.txt
@@ -22,63 +22,15 @@ include_directories("${PERL_INCLUDE_PATH}")
 # Need to pass in the same compiler flags used to build Perl itself
 execute_process(COMMAND perl -MConfig -e "print \$Config{ccflags}"
                 OUTPUT_VARIABLE PERLCFLAGS)
-if (NOT PERL_INSTALL_PREFIX)
-  set(PERL_INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX})
-endif (NOT PERL_INSTALL_PREFIX)
-
-execute_process(COMMAND perl -V:prefix
-  OUTPUT_VARIABLE PERL_PREFIX
-)
-
-string(REGEX REPLACE
-  "[a-z]+='([^']+)'.*"
-  "\\1"
-  PERL_PREFIX
-  ${PERL_PREFIX}
-)
-
-# get the Perl vendor lib directory
-execute_process(COMMAND perl -V:installvendorlib
-  OUTPUT_VARIABLE PERL_VENDORLIB_OUTPUT_VARIABLE
-  RESULT_VARIABLE PERL_VENDORLIB_RESULT_VARIABLE)
-
-string(REGEX REPLACE
-  "(.*)${PERL_PREFIX}(.*)"
-  "\\1${PERL_INSTALL_PREFIX}\\2"
-  PERL_VENDORLIB_OUTPUT_VARIABLE
-  "${PERL_VENDORLIB_OUTPUT_VARIABLE}"
-)
-
-string(REGEX REPLACE
-  "install[a-z]+='([^']+)'.*"
-  "\\1"
-  PERL_VENDORLIB
-  ${PERL_VENDORLIB_OUTPUT_VARIABLE}
-)
-
-file(TO_CMAKE_PATH "${PERL_VENDORLIB}" PERL_VENDORLIB)
-
-# get the Perl arch lib directory
-
-execute_process(COMMAND perl -V:installarchlib
-  OUTPUT_VARIABLE PERL_ARCHLIB_OUTPUT_VARIABLE
-  RESULT_VARIABLE PERL_ARCHLIB_RESULT_VARIABLE)
-
-string(REGEX REPLACE
-  "(.*)${PERL_PREFIX}(.*)"
-  "\\1${PERL_INSTALL_PREFIX}\\2"
-  PERL_ARCHLIB_OUTPUT_VARIABLE
-  "${PERL_ARCHLIB_OUTPUT_VARIABLE}"
-)
-
-string(REGEX REPLACE
-  "install[a-z]+='([^']+)'.*"
-  "\\1"
-  PERL_ARCHLIB
-  ${PERL_ARCHLIB_OUTPUT_VARIABLE}
-)
-
-file(TO_CMAKE_PATH "${PERL_ARCHLIB}" PERL_ARCHLIB)
+if (NOT PERL_VENDORLIB)
+  execute_process(COMMAND perl -V:installvendorlib
+                  OUTPUT_VARIABLE PERL_VENDORLIB_OUTPUT_VARIABLE
+                  RESULT_VARIABLE PERL_VENDORLIB_RESULT_VARIABLE)
+  if (NOT PERL_VENDORLIB_RESULT_VARIABLE)
+      string(REGEX REPLACE "install[a-z]+='([^']+)'.*" "\\1" PERL_VENDORLIB ${PERL_VENDORLIB_OUTPUT_VARIABLE})
+      file(TO_CMAKE_PATH "${PERL_VENDORLIB}" PERL_VENDORLIB)
+  endif (NOT PERL_VENDORLIB_RESULT_VARIABLE)
+endif (NOT PERL_VENDORLIB)
 
 set (CMAKE_C_FLAGS ${PERLCFLAGS})
 
@@ -98,14 +50,34 @@ else()
         )
 endif ((${CMAKE_MAJOR_VERSION} EQUAL 2) AND (${CMAKE_MINOR_VERSION} LESS 8))
 
+set(PERL_LIBRARIES
+    lib/qpid/proton/array_helper.pm
+    lib/qpid/proton/Constants.pm
+    lib/qpid/proton/Data.pm
+    lib/qpid/proton/Mapping.pm
+    lib/qpid/proton/Message.pm
+    lib/qpid/proton/Messenger.pm
+)
+
+# get the perl vendor library if it's not already defined
+#if (NOT PERL_VENDORLIB)
+#  execute_process(COMMAND ${PERL_EXECUTABLE} "-V:installvendorlib"
+#                  OUTPUT_VARIABLE PERL_VENDORLIB_OUTPUT_VARIABLE
+#                  RESULT_VARIABLE PERL_VENDORLIB_RESULT_VARIABLE)
+#endif (!DEFINED PERL_VENDORLIB)
+
 install(FILES ${CMAKE_CURRENT_BINARY_DIR}/cproton_perl.pm
         DESTINATION ${PERL_ARCHLIB}
         COMPONENT Perl)
 
-install(DIRECTORY lib/qpid
+install(FILES lib/qpid_proton.pm
         DESTINATION ${PERL_VENDORLIB}
         COMPONENT Perl)
 
-install(FILES lib/qpid_proton.pm
-  DESTINATION ${PERL_VENDORLIB}
-  COMPONENT Perl)
+INSTALL(FILES lib/qpid/proton.pm
+        DESTINATION ${PERL_VENDORLIB}/qpid
+        COMPONENT Perl)
+
+INSTALL(FILES ${PERL_LIBRARIES}
+        DESTINATION ${PERL_VENDORLIB}/qpid/proton
+        COMPONENT Perl)
