PROTON-498: set the VALGRIND env var to the path to the valgrind executable
git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1562213 13f79535-47bb-0310-9956-ffa450edef68

--- a/proton-c/CMakeLists.txt
+++ b/proton-c/CMakeLists.txt
@@ -422,7 +422,7 @@ option(ENABLE_VALGRIND "Use valgrind to detect run-time problems" ON)
 if (ENABLE_VALGRIND AND NOT VALGRIND)
   message(STATUS "Can't locate the valgrind command; no run-time error detection")
 else (ENABLE_VALGRIND AND NOT VALGRIND)
-  set (VALGRIND_ENV "VALGRIND=1")
+  set (VALGRIND_ENV "VALGRIND=${VALGRIND}")
 endif (ENABLE_VALGRIND AND NOT VALGRIND)
 
 # c tests:
