PROTON-500: enable valgrind on C unit tests
git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1562984 13f79535-47bb-0310-9956-ffa450edef68

--- a/proton-c/src/tests/CMakeLists.txt
+++ b/proton-c/src/tests/CMakeLists.txt
@@ -23,6 +23,7 @@ set_target_properties (
   c-object-tests
   PROPERTIES
   COMPILE_FLAGS "${COMPILE_WARNING_FLAGS} ${COMPILE_PLATFORM_FLAGS}"
+  OUTPUT_NAME c-object-tests
   )
 pn_c_files (object.c)
 
@@ -32,8 +33,15 @@ set_target_properties (
   c-message-tests
   PROPERTIES
   COMPILE_FLAGS "${COMPILE_WARNING_FLAGS} ${COMPILE_PLATFORM_FLAGS}"
+  OUTPUT_NAME c-message-tests
   )
 pn_c_files (message.c)
 
-add_test (c-object-tests c-object-tests)
-add_test (c-message-tests c-message-tests)
+if (ENABLE_VALGRIND AND VALGRIND)
+  set(memcheck-cmd ${VALGRIND} --error-exitcode=1 --quiet
+                   --leak-check=full --trace-children=yes)
+endif (ENABLE_VALGRIND AND VALGRIND)
+
+add_test (c-object-tests ${memcheck-cmd} ./c-object-tests)
+add_test (c-message-tests ${memcheck-cmd} ./c-message-tests)
+
