PROTON-511: updated the java shim to adapt directly to the cproton API defined by swig
git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1565256 13f79535-47bb-0310-9956-ffa450edef68

--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -68,6 +68,7 @@ directory &lt;basedir&gt;/build/proton-c.</description>
           <systemPropertyVariables>
             <protonJythonIgnoreFile>${basedir}/java/pythonTests.ignore</protonJythonIgnoreFile>
             <protonJythonTestRoot>${basedir}/python</protonJythonTestRoot>
+            <protonJythonBinding>${basedir}/../proton-c/bindings/python</protonJythonBinding>
             <protonJythonTestScript>${basedir}/python/proton-test</protonJythonTestScript>
             <protonJythonTestXmlOutputDirectory>${testReportOutputDirectory}</protonJythonTestXmlOutputDirectory>
             <java.util.logging.config.file>${project.build.outputDirectory}/logging.properties</java.util.logging.config.file>
