NO-JIRA: fix C++ build: remove unsupported warning option
git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1566632 13f79535-47bb-0310-9956-ffa450edef68

--- a/proton-c/CMakeLists.txt
+++ b/proton-c/CMakeLists.txt
@@ -187,8 +187,9 @@ if (CMAKE_COMPILER_IS_GNUCC)
   if (ENABLE_WARNING_ERROR)
     set (WERROR "-Werror")
   endif (ENABLE_WARNING_ERROR)
-  set (COMPILE_WARNING_FLAGS "${WERROR} -Wall -Wstrict-prototypes -pedantic-errors")
+  set (COMPILE_WARNING_FLAGS "${WERROR} -Wall -pedantic-errors")
   if (NOT BUILD_WITH_CXX)
+    set (COMPILE_WARNING_FLAGS "${COMPILE_WARNING_FLAGS} -Wstrict-prototypes")
     set (COMPILE_LANGUAGE_FLAGS "-std=c99")
     set (COMPILE_PLATFORM_FLAGS "-std=gnu99")
 
