--- a/proton-c/CMakeLists.txt
+++ b/proton-c/CMakeLists.txt
@@ -250,6 +250,7 @@ set (qpid-proton-core
 
   src/dispatcher/dispatcher.c
   src/engine/engine.c
+  src/engine/event.c
   src/transport/transport.c
   src/message/message.c
   src/sasl/sasl.c
